# ToFAS

./: .gitignore  README.md  accounts.xlsx  comtest.py  cwee2.py  example.xlsx  excels.py  getwin.py  getwin2.py  main.py  main2.py  main_old.py  output.xlsx  process_name.py  pyproject.toml  template.py  tof01May2025.xlsx  tof02May2025.xlsx  tof05May2025.xlsx  tof30Apr2025.xlsx  touchjing.py
